<resources>
    <string name="app_name">Beber Àgua</string>
    <string name="peso">Seu Peso (Kg)</string>
    <string name="idade">Sua Idade </string>
    <string name="text_calcular">Calcular Ingestão Diária </string>
    <string name="lembrete">Lembrete </string>
    <string name="alarme">Alarme </string>
    <string name="hora">00 </string>
    <string name="dois_ponto">: </string>
    <string name="minutos">00 </string>
    <string name="toast_informe_peso">Informe seu Peso! </string>
    <string name="toast_informe_idade">Informe sua Idade! </string>
    <string name="redefinir_dados">Redefinir Dados </string>
    <string name="mensagem">Deseja excluir todos os dados exitentes? </string>
    <string name="mensagem_alerta">Hora de Beber àgua!</string>
</resources>