<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <View
        android:id="@+id/container_header"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintStart_toStartOf="@id/container_header"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        />
    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:gravity="center"

        />
    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/idade"
        android:textColorHint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintStart_toEndOf="@id/edit_peso"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        android:maxLength="3"
        android:gravity="center"

        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:text="@string/text_calcular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_degrade_button"
        />
    <View
        android:id="@+id/container_resultado_ml"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/container_resultado_ml"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"

        />

    <TextView
        android:id="@+id/txt_resultado_ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"
        app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
        app:layout_constraintTop_toTopOf="@id/container_resultado_ml" />
    <Button
        android:id="@+id/btn_definir_lembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lembrete"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"

        />

    <Button
        android:id="@+id/btn_alarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/alarme"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"

        />
    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        />
    <TextView
        android:id="@+id/txt_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dois_ponto"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_hora"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/txt_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutos"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_definir_lembrete"
        app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>